# zfl-ai

./: .gitignore  README.md  dev-requirements.txt  pyproject.toml  requirements.txt
.github/workflows/: publish.yml  test.yml
ai/: cat_cnn.py  forms.py  tests.py  views.py
config/: settings.py  urls.py
static/home/css/: base-style.css  home-style.css
static/home/js/: page-top.js
templates/: base.html
