[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "Appのパッケージ名（PyPIに登録されている名前は使えないので要注意）"
dynamic = ["version"]
description = 'HatchパッケージングシステムでのDjango'
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
keywords = []
authors = [
  { name = "Warise", email = "example@gmail.com" },
]
classifiers = [
  "Environment :: Web Environment",
  "Framework :: Django",
  "Framework :: Django :: X.Y  # Replace "X.Y" as appropriate",
  "Intended Audience :: Developers",
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/unknown/Appのパッケージ名#readme"
Issues = "https://github.com/unknown/Appのパッケージ名/issues"
Source = "https://github.com/unknown/Appのパッケージ名"

# [tool.hatch.version]
# path = "app_1/__init__.py"

# デフォルト環境の依存パッケージ
[tool.hatch.envs.default]
dependencies = ["django", "app_1"]

# デフォルト環境のスクリプト
# hatch run test app_1
[tool.hatch.envs.default.scripts]
run = "python3 manage.py runserver"
# test = "python3 manage.py test {args}"

# ビルド実行時に含めるファイルと含めないファイルの設定
# 以下は配布用Djangoアプリに対しての設定
# [tool.hatch.build]
# include = ["app_1/*"]
# exclude = ["app_1/migrations/*"]
